--- a/locale/de/LC_MESSAGES/module_reviews.po
+++ b/locale/de/LC_MESSAGES/module_reviews.po
@@ -3,33 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Zikula 1.x\n"
+"Project-Id-Version: Reviews\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-24 17:15+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2013-08-04 22:22+0100\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: templates/plugins/function.reviewsuserlinks.php:52
 #: templates/reviews_user_main.htm:2
 msgid "Reviews index"
-msgstr ""
+msgstr "Index der Rezensionen"
 
 #: templates/plugins/function.reviewsuserlinks.php:56
 #: templates/reviews_user_view.htm:2
 msgid "View reviews"
-msgstr ""
+msgstr "Übersicht Rezensionen"
 
 #: templates/plugins/function.reviewsuserlinks.php:60
 msgid "Submit a review"
-msgstr ""
+msgstr "Eine Rezension einreichen"
 
 #: lib/Reviews/Installer.php:34
 msgid ""
@@ -37,199 +36,202 @@ msgid ""
 "use categorization for the reviews, register at least one property for the "
 "module in the Category Registry."
 msgstr ""
+"Warnung! Konnte den Standardkategoriebaum nicht erstellen. Wenn Du "
+"Kategorien nutzen möchtest, registriere zunächst einen Eintrag für das Modul "
+"in der Kategorienregistrierung."
 
 #: lib/Reviews/Installer.php:117 templates/reviews_user_menu.htm:2
 #: templates/reviews_search_options.htm:5 templates/reviews_admin_menu.htm:5
 msgid "Reviews"
-msgstr ""
+msgstr "Rezensionen"
 
 #: lib/Reviews/Installer.php:118 lib/Reviews/Version.php:18
 msgid "Reviews system module"
-msgstr ""
+msgstr "Reviews System Modul"
 
 #: lib/Reviews/Version.php:17
 msgid "Reviews system"
-msgstr ""
+msgstr "Rezensionssystem"
 
 #. ! this defines the module's url
 #: lib/Reviews/Version.php:20
 msgid "reviews"
-msgstr ""
+msgstr "Rezensionen"
 
 #: lib/Reviews/Api/Search.php:70 lib/Reviews/Api/Search.php:97
 #: lib/Reviews/Api/User.php:125
 msgid "Error! Could not load items."
-msgstr ""
+msgstr "Fehler! Konnte Element nicht laden."
 
 #: lib/Reviews/Api/User.php:233
 msgid "Error! Creation attempt failed."
-msgstr ""
+msgstr "Fehler! Erstellungsversuch fehlgeschlagen."
 
 #: lib/Reviews/Api/Admin.php:32 lib/Reviews/Api/Admin.php:73
 #: lib/Reviews/Controller/User.php:275 lib/Reviews/Controller/Admin.php:73
 #: lib/Reviews/Controller/Admin.php:171
 msgid "No such review found."
-msgstr ""
+msgstr "Keine solche Rezension gefunden."
 
 #: lib/Reviews/Api/Admin.php:41
 msgid "Error! Deletion attempt failed."
-msgstr ""
+msgstr "Fehler! Löschen fehlgeschlagen."
 
 #: lib/Reviews/Api/Admin.php:95
 msgid "Error! Update attempt failed."
-msgstr ""
+msgstr "Fehler! Aktualisierung fehlgeschlagen."
 
 #: lib/Reviews/Api/Admin.php:169
 msgid "View reviews list"
-msgstr ""
+msgstr "Übersicht der Rezensionen"
 
 #: lib/Reviews/Api/Admin.php:173
 msgid "Create a review"
-msgstr ""
+msgstr "Eine Rezension erstellen"
 
 #: lib/Reviews/Api/Admin.php:177
 msgid "Purge permalinks"
-msgstr ""
+msgstr "Permalinks bereinigen"
 
 #: lib/Reviews/Api/Admin.php:179 templates/reviews_admin_modifyconfig.htm:2
 msgid "Settings"
-msgstr ""
+msgstr "Einstellungen"
 
 #: lib/Reviews/Controller/User.php:124
 msgid "Done! Review created"
-msgstr ""
+msgstr "Erledigt! Rezension erstellt"
 
 #: lib/Reviews/Controller/User.php:190
 msgid "Invalid category passed."
-msgstr ""
+msgstr "Ungültige Kategorie übermittelt."
 
 #: lib/Reviews/Controller/User.php:286
 msgid "No such review page found."
-msgstr ""
+msgstr "keine solche Rezension gefunden."
 
 #: lib/Reviews/Controller/Admin.php:87 lib/Reviews/Controller/Admin.php:243
 #, php-format
 msgid "Error! Unable to load class [%s]"
-msgstr ""
+msgstr "Fehler! Nicht möglich Klasse [%s] zu laden"
 
 #: lib/Reviews/Controller/Admin.php:137
 msgid "Done! Review updated."
-msgstr ""
+msgstr "Erledigt! Rezension aktualisiert."
 
 #: lib/Reviews/Controller/Admin.php:199
 msgid "Done! Review deleted."
-msgstr ""
+msgstr "Erledigt! Rezension gelöscht."
 
 #: lib/Reviews/Controller/Admin.php:226
 msgid "Purging of the pemalinks was successful"
-msgstr ""
+msgstr "Bereinigen der Permalinks war erfolgreich"
 
 #: lib/Reviews/Controller/Admin.php:228
 msgid "Purging of the pemalinks has failed"
-msgstr ""
+msgstr "Bereinigen der Permalinks fehlgeschlagen"
 
 #: lib/Reviews/Controller/Admin.php:282
 msgid "View"
-msgstr ""
+msgstr "Übericht"
 
 #: lib/Reviews/Controller/Admin.php:287
 msgid "Edit"
-msgstr ""
+msgstr "Bearbeiten"
 
 #: lib/Reviews/Controller/Admin.php:292
 msgid "Delete"
-msgstr ""
+msgstr "Löschen"
 
 #: lib/Reviews/Controller/Admin.php:380
 msgid "Done! Module configuration updated."
-msgstr ""
+msgstr "Erledigt! Modulkonfiguration aktualisert."
 
 #: templates/reviews_admin_delete.htm:2
 msgid "Delete Review"
-msgstr ""
+msgstr "Rezension löschen"
 
 #: templates/reviews_admin_delete.htm:11
 msgid "Do you really want to delete this review?"
-msgstr ""
+msgstr "Möchtest Du diese Rezension wirklich löschen?"
 
 #: templates/reviews_admin_delete.htm:16 templates/reviews_admin_delete.htm:21
 msgid "Confirm deletion?"
-msgstr ""
+msgstr "Löschen bestätigen?"
 
 #: templates/reviews_admin_delete.htm:22
 #: templates/reviews_admin_modifyconfig.htm:35
 #: templates/reviews_admin_new.htm:95 templates/reviews_user_new.htm:70
 #: templates/reviews_admin_modify.htm:113
 msgid "Cancel"
-msgstr ""
+msgstr "Abbrechen"
 
 #: templates/reviews_admin_modifyconfig.htm:15
 msgid "General Settings"
-msgstr ""
+msgstr "Allgemeine Einstellungen"
 
 #: templates/reviews_admin_modifyconfig.htm:17
 msgid "Enable categorization"
-msgstr ""
+msgstr "Kategorisierung einschalten"
 
 #: templates/reviews_admin_modifyconfig.htm:21
 msgid "Items per page"
-msgstr ""
+msgstr "Elemente pro Seite"
 
 #: templates/reviews_admin_modifyconfig.htm:26
 msgid "Permalinks settings"
-msgstr ""
+msgstr "Permalink Einstellungen"
 
 #: templates/reviews_admin_modifyconfig.htm:28
 msgid "Add category title to PermaLink"
-msgstr ""
+msgstr "Kategorietitel zum Permalink hinzufügen"
 
 #: templates/reviews_admin_modifyconfig.htm:34
 msgid "Update Configuration"
-msgstr ""
+msgstr "Einstellungen aktualisieren"
 
 #: templates/reviews_admin_new.htm:2
 msgid "Create a Review"
-msgstr ""
+msgstr "Eine Rezension erstellen"
 
 #: templates/reviews_admin_new.htm:16 templates/reviews_user_view.htm:16
 #: templates/reviews_admin_view.htm:49 templates/reviews_user_new.htm:12
 #: templates/reviews_admin_modify.htm:18
 msgid "Title"
-msgstr ""
+msgstr "Titel"
 
 #: templates/reviews_admin_new.htm:18 templates/reviews_user_new.htm:14
 #: templates/reviews_admin_modify.htm:20
 msgid "Name of the reviewed product."
-msgstr ""
+msgstr "Name des rezensierten Produkts."
 
 #: templates/reviews_admin_new.htm:21 templates/reviews_admin_modify.htm:23
 msgid "PermaLink URL title"
-msgstr ""
+msgstr "Permalink Url Titel"
 
 #: templates/reviews_admin_new.htm:23 templates/reviews_admin_modify.htm:25
 msgid "(Blank = auto-generate)"
-msgstr ""
+msgstr "(Leer = Autogenerierung)"
 
 #: templates/reviews_admin_new.htm:27 templates/reviews_admin_view.htm:16
 #: templates/reviews_admin_view.htm:52 templates/reviews_user_new.htm:18
 #: templates/reviews_admin_modify.htm:29
 msgid "Category"
-msgstr ""
+msgstr "Kategorie"
 
 #: templates/reviews_admin_new.htm:28 templates/reviews_admin_view.htm:17
 #: templates/reviews_user_new.htm:19 templates/reviews_admin_modify.htm:30
 msgid "Choose Category"
-msgstr ""
+msgstr "Kategorie wählen"
 
 #: templates/reviews_admin_new.htm:39 templates/reviews_user_new.htm:30
 #: templates/reviews_admin_modify.htm:47
 msgid "Language"
-msgstr ""
+msgstr "Sprache"
 
 #: templates/reviews_admin_new.htm:44 templates/reviews_user_new.htm:35
 #: templates/reviews_admin_modify.htm:52
 msgid "Review"
-msgstr ""
+msgstr "Rezension"
 
 #: templates/reviews_admin_new.htm:47 templates/reviews_user_new.htm:38
 #: templates/reviews_admin_modify.htm:55
@@ -237,15 +239,18 @@ msgid ""
 "Your actual review. Please observe proper grammar! Make it at least 100 "
 "words, OK? You may also use HTML tags if you know how to use them"
 msgstr ""
+"Deine aktuelle Rezension. Bitte beachte angemessene Rechtschreibung! "
+"Schreibe mindestens 100 Wörter, ok? Du darfst HTML Tags nutzen, wenn Du "
+"weist wie sie einzusetzen sind."
 
 #: templates/reviews_admin_new.htm:50 templates/reviews_user_view.htm:18
 #: templates/reviews_user_display.htm:17 templates/reviews_admin_modify.htm:58
 msgid "Score"
-msgstr ""
+msgstr "Bewertung"
 
 #: templates/reviews_admin_new.htm:52
 msgid "Your Score"
-msgstr ""
+msgstr "Deine Bewertung"
 
 #: templates/reviews_admin_new.htm:53 templates/reviews_admin_new.htm:54
 #: templates/reviews_admin_new.htm:55 templates/reviews_admin_new.htm:56
@@ -256,63 +261,64 @@ msgstr ""
 #: templates/reviews_admin_modify.htm:64 templates/reviews_admin_modify.htm:65
 #: templates/reviews_admin_modify.htm:66 templates/reviews_admin_modify.htm:67
 msgid "Stars"
-msgstr ""
+msgstr "Sterne"
 
 #: templates/reviews_admin_new.htm:61 templates/reviews_admin_new.htm:62
 #: templates/reviews_admin_modify.htm:68 templates/reviews_admin_modify.htm:69
 msgid "Star"
-msgstr ""
+msgstr "Stern"
 
 #: templates/reviews_admin_new.htm:66 templates/reviews_user_new.htm:41
 #: templates/reviews_admin_modify.htm:73
 msgid "Your name"
-msgstr ""
+msgstr "Dein Name"
 
 #: templates/reviews_admin_new.htm:68 templates/reviews_user_new.htm:43
 #: templates/reviews_admin_modify.htm:75
 msgid "Your full name. Required."
-msgstr ""
+msgstr "Dein voller Name. Pflichtfeld."
 
 #: templates/reviews_admin_new.htm:71 templates/reviews_user_new.htm:46
 #: templates/reviews_admin_modify.htm:78
 msgid "Your e-mail"
-msgstr ""
+msgstr "Deine email"
 
 #: templates/reviews_admin_new.htm:73 templates/reviews_user_new.htm:48
 #: templates/reviews_admin_modify.htm:80
 msgid "Your e-mail address. Required."
-msgstr ""
+msgstr "Deine email Adresse. Pflichtfeld."
 
 #: templates/reviews_admin_new.htm:76 templates/reviews_user_display.htm:21
 #: templates/reviews_user_new.htm:51 templates/reviews_admin_modify.htm:83
 msgid "Related Link"
-msgstr ""
+msgstr "Ergänzender Link"
 
 #: templates/reviews_admin_new.htm:78 templates/reviews_user_new.htm:53
 #: templates/reviews_admin_modify.htm:85
 msgid "Product's official website. Make sure your URL starts with 'http://'"
-msgstr ""
+msgstr "Offizielle Website des Produkts. Muss mit 'http://' beginnen"
 
 #: templates/reviews_admin_new.htm:81 templates/reviews_user_new.htm:56
 #: templates/reviews_admin_modify.htm:88
 msgid "Link title"
-msgstr ""
+msgstr "Linktitel"
 
 #: templates/reviews_admin_new.htm:83 templates/reviews_user_new.htm:58
 #: templates/reviews_admin_modify.htm:90
 msgid "Required if you have a related link, otherwise not required."
 msgstr ""
+"Pflicht, wenn Du einne zugehörigen Link hast, andernfalls keine Pflicht."
 
 #: templates/reviews_admin_new.htm:86 templates/reviews_user_new.htm:61
 #: templates/reviews_admin_modify.htm:93
 msgid "Image filename"
-msgstr ""
+msgstr "Dateiname des Bildes"
 
 #: templates/reviews_admin_new.htm:88 templates/reviews_user_new.htm:63
 #: templates/reviews_admin_modify.htm:95
 #, php-format
 msgid "Name of the cover image, located in %s. Not required."
-msgstr ""
+msgstr "Name des Coverbildes, befindlich in %s. Kein Pflichtfeld."
 
 #: templates/reviews_admin_new.htm:90 templates/reviews_user_new.htm:65
 #: templates/reviews_admin_modify.htm:97
@@ -321,96 +327,99 @@ msgid ""
 "grammar and capitalization. For instance, please do not enter your text in "
 "ALL CAPS, as it will be rejected."
 msgstr ""
+"Bitte stelle sicher, dass die Informationen 100% gültig sind. Benutze "
+"angemessene Rechtschreibung und Großschreibung. Schreibe Deinen Text z.B. "
+"nicht komplett in Großbuchstaben, da er ansonsten abgelehnt wird."
 
 #: templates/reviews_admin_new.htm:94 templates/reviews_user_new.htm:69
 msgid "Create"
-msgstr ""
+msgstr "Erstellen"
 
 #: templates/reviews_user_main.htm:6
 msgid "10 Most Popular Reviews"
-msgstr ""
+msgstr "10 meist populäre Rezensionen"
 
 #: templates/reviews_user_main.htm:19
 msgid "10 Most Recent Reviews"
-msgstr ""
+msgstr "10 meist aufgerufene Rezensionen"
 
 #: templates/reviews_user_main.htm:33
 msgid "Categories"
-msgstr ""
+msgstr "Kategorien"
 
 #: templates/reviews_user_view.htm:17 templates/reviews_user_display.htm:14
 msgid "Reviewer"
-msgstr ""
+msgstr "Rezensent"
 
 #: templates/reviews_user_view.htm:19 templates/reviews_user_display.htm:24
 msgid "Hits"
-msgstr ""
+msgstr "Zugriffe"
 
 #: templates/reviews_user_view.htm:25 templates/reviews_user_view.htm:42
 #: templates/reviews_admin_view.htm:75
 msgid "No items found."
-msgstr ""
+msgstr "Keine Elemente gefunden."
 
 #: templates/reviews_admin_view.htm:3
 msgid "View Reviews List"
-msgstr ""
+msgstr "Übersicht der Rezensionen"
 
 #: templates/reviews_admin_view.htm:39
 msgid "Filter"
-msgstr ""
+msgstr "Filter"
 
 #: templates/reviews_admin_view.htm:40
 msgid "Reset"
-msgstr ""
+msgstr "Zurücksetzen"
 
 #: templates/reviews_admin_view.htm:50
 msgid "Internal ID"
-msgstr ""
+msgstr "Interne Id"
 
 #: templates/reviews_admin_view.htm:54
 msgid "Options"
-msgstr ""
+msgstr "Optionen"
 
 #: templates/reviews_user_display.htm:12
 msgid "Published on"
-msgstr ""
+msgstr "Veröffentlicht am"
 
 #: templates/reviews_user_new.htm:2
 msgid "Submit a Review"
-msgstr ""
+msgstr "Eine Rezension senden "
 
 #: templates/reviews_admin_modify.htm:2
 msgid "Edit Review"
-msgstr ""
+msgstr "Rezension bearbeiten"
 
 #: templates/reviews_admin_modify.htm:16
 msgid "Content"
-msgstr ""
+msgstr "Inhalt"
 
 #: templates/reviews_admin_modify.htm:100
 msgid "Meta data"
-msgstr ""
+msgstr "Metadaten"
 
 #: templates/reviews_admin_modify.htm:103
 #, php-format
 msgid "Created by %s"
-msgstr ""
+msgstr "Erstellt von %s"
 
 #: templates/reviews_admin_modify.htm:104
 #, php-format
 msgid "Created on %s"
-msgstr ""
+msgstr "Erstellt am %s"
 
 #: templates/reviews_admin_modify.htm:106
 #, php-format
 msgid "Last update by %s"
-msgstr ""
+msgstr "Letztes Update von %s"
 
 #: templates/reviews_admin_modify.htm:107
 #, php-format
 msgid "Updated on %s"
-msgstr ""
+msgstr "Aktualisiert am %s"
 
 #: templates/reviews_admin_modify.htm:112
 msgid "Update"
-msgstr ""
+msgstr "Update"
