--- a/locale/de/LC_MESSAGES/module_reviews.po
+++ b/locale/de/LC_MESSAGES/module_reviews.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: Reviews\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-24 17:15+0000\n"
-"PO-Revision-Date: 2013-08-04 22:22+0100\n"
+"PO-Revision-Date: 2014-11-23 18:24+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 1.6.9\n"
+"Language: de\n"
 
 #: templates/plugins/function.reviewsuserlinks.php:52
 #: templates/reviews_user_main.htm:2
@@ -337,11 +338,11 @@ msgstr "Erstellen"
 
 #: templates/reviews_user_main.htm:6
 msgid "10 Most Popular Reviews"
-msgstr "10 meist populäre Rezensionen"
+msgstr "10 meist aufgerufene Rezensionen"
 
 #: templates/reviews_user_main.htm:19
 msgid "10 Most Recent Reviews"
-msgstr "10 meist aufgerufene Rezensionen"
+msgstr "10 neueste Rezensionen"
 
 #: templates/reviews_user_main.htm:33
 msgid "Categories"
