--- a/locale/module_reviews.pot
+++ b/locale/module_reviews.pot
@@ -1930,3 +1930,7 @@ msgstr ""
 msgid ""
 "If you change this please save the block once to reload the parameters below."
 msgstr ""
+
+msgid ""
+"Unknown"
+msgstr ""
